# vajra

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
cmd/vajra/: client.go  cmd_admin.go  cmd_apikey.go  cmd_auth.go  cmd_file.go  cmd_node.go  cmd_pool.go  cmd_sandbox.go  cmd_snapshot.go  cmd_template.go  cmd_webhook.go  config.go  main.go  output.go  root.go
cmd/vajra-agent/: main.go
cmd/vajra-master/: main.go
cmd/vajra-proxy/: main.go
docs/: architecture.md  deploy.md  known-gaps.md  openapi.yaml  security-threat-model.md
examples/coding-agent/: README.md  agent.py  requirements.txt
internal/agent/: archive.go  archive_test.go  exec.go  files.go  files_test.go  forward.go  handlers_logs.go  health.go  health_test.go  image.go  image_test.go  logbuf.go  master_client.go  migrate.go  migrate_test.go  pool.go  (+10 more)
migrations/: 001_init.down.sql  001_init.up.sql  002_share_links.up.sql  003_product_features.down.sql  003_product_features.up.sql  004_template_public.down.sql  004_template_public.up.sql  005_sandbox_boot_metrics.down.sql  005_sandbox_boot_metrics.up.sql  006_billing.down.sql  006_billing.up.sql  007_admin.down.sql  007_admin.up.sql  008_git_clone.down.sql  008_git_clone.up.sql
scripts/: bench_boot.py  benchmark.go  benchmark.sh  build-custom-template.sh  build-template.sh  test-full-stack.sh
sdk/python/: README.md  pyproject.toml
sdk/python/vajra/: __init__.py  client.py  models.py
test/: master_integration_test.go
web/: index.html  package-lock.json  package.json  vite.config.ts
(+154 files in other folders)
